--- a/frontend/.env
+++ b/frontend/.env
@@ -3,4 +3,4 @@ VITE_API_BASE_URL=http://localhost:8000
 VITE_AUTH0_DOMAIN=dev-rxgd117iswkoaezy.us.auth0.com
 VITE_AUTH0_CLIENT_ID=zjsd3smZiHfjK5BkTKCIQNhw6Qy1UTbq
 VITE_AUTH0_CALLBACK_URL =http://localhost:5173
-VITE_AUTH0_AUDIENCE=Appnafood.zone
+VITE_AUTH0_AUDIENCE=Appnafood.zone   # access only that token which come from   Appnafood.zone
